# llm-chat-bot

./: .gitignore  README.md  package-lock.json  rag_chain_memory.py  requirements.txt  setup.cfg
backend/: app.py  build_vector_store.py  generate_pdf.py  rag.py  rag_chain.py
backend/data/: build_data.py  build_index.py
backend/models/: bedrock.py  gemma.py
backend/rag/: rag_chain.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: ChatApp.jsx  main.jsx
