# setup.cfg
[metadata]
name = llm-whatsapp-bot
version = 0.1.0
description = WhatsApp chatbot with local RAG and LLM (Gemma 3 4B)
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    fastapi
    uvicorn[standard]
    torch
    transformers
    accelerate
    sentence-transformers
    langchain
    langchain-community
    langchain-huggingface
    faiss-cpu
    bitsandbytes
    fpdf
    pypdf