# setup.cfg
[metadata]
name = llm-whatsapp-bot
version = 0.1.0
description = WhatsApp chatbot with local RAG and LLM (Gemma 3 4B)
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    langchain>=0.2.0
    langchain-ollama>=0.1.0
    langchain-qdrant>=0.1.0
    langchain-community
    langchain-huggingface
    sentence-transformers>=2.2.0
    torch>=1.13.0
    transformers>=4.26.0
    pypdf
    faiss-cpu
    uvicorn
    fastapi
    ollama