# setup.cfg
[metadata]
name = llm-whatsapp-bot
version = 0.1.0
description = WhatsApp chatbot with local RAG and LLM (Gemma 3 4B)
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    fastapi
    uvicorn[standard]
    llama-index
    llama-index-core
    llama-index-llms-ollama 
    llama-index-embeddings-huggingface
    llama-index-vector-stores-faiss
    sentence-transformers
    faiss-cpu
    torch
    pydantic
    python-dotenv